[workspace]
members = ["modules/pubsub"]

[package]
name = "netscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
pubsub = {path="modules/pubsub"}
tokio = {version="1", features=["macros", "rt-multi-thread"]}
thiserror = "1.0.56"


[dependencies]
tokio.workspace = true
pubsub.workspace = true
