[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
tokio-util = {workspace=true, features=["full"]}
tokio = {workspace=true, features=["time"]}
log.workspace = true
pubsub.workspace = true
entities.workspace = true