[package]
name = "portscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {workspace=true, features=["net"]}
entities.workspace = true
pubsub.workspace = true
log.workspace = true
anyhow.workspace = true
